--- a/indexs/admin.html
+++ b/indexs/admin.html
@@ -80,8 +80,7 @@
 				<div class="col-md-6">
 					<div class="admin_nav_butt">
 						<ul>
-							<li><a href="#"><button><i class="fa fa-file-o rr" aria-hidden="true"></i><n/>добавить книгу</button></a></li>
-							<li><a href="#"><button><i class="fa fa-arrow-down rr" aria-hidden="true"></i><n/>скачать</button></a></li>
+							<li><a href="#"><button><i class="fa fa-file-o rr" aria-hidden="true"></i><n/>добавить книгу</button></a>
 						</ul>
 					</div>
 				</div>
